# magi

./: .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  pyproject.toml
src/magi/: __init__.py  entrypoint.py
src/magi/domain/: __init__.py  models.py
src/magi/orchestration/: __init__.py  independent.py
src/magi/providers/: base.py  fake.py
tests/: test_cli.py  test_independent.py
