[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[project]
name = "magi"
description = "A provider-neutral multi-model deliberation engine"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.11,<3",
  "typer>=0.16,<1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.17,<2",
  "pre-commit>=4.2,<5",
  "ruff>=0.12,<1",
]
test = [
  "pytest>=8.4,<9",
  "pytest-asyncio>=1.1,<2",
]

[project.scripts]
magi = "magi.entrypoint:app"

[tool.hatch.build]
dev-mode-dirs = ["src/"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/magi/_version.py"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-ra"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "D", "I", "UP", "B", "SIM", "RUF"]
ignore = ["D100", "D104"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
python_version = "3.12"
strict = true
pretty = true
packages = ["magi"]
